modified:   css/login.css         new file:   css/style.css         new file:   img/user-ibedes_hover.png         modified:   index.html         modified:   js/login.js         modified:   style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Windows XP Replica</title>
+    <title>Windows 98 Replica</title>
     <!-- Load CSS in correct order -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/splash.css">
@@ -28,15 +28,14 @@
 
     <div id="login-screen" class="login-screen" style="display: none;">
         <div class="login-box">
-            <img src="img/user-ibedes.png" alt="User" class="user-avatar">
             <h2>Welcome</h2>
             <div class="user-select">
-                <div class="user-account selected">
-                    <img src="img/user-ibedes.png" alt="User">
-                    <span>User</span>
+                <div class="user-account selected" data-user="ibedes">
+                    <img src="img/user-ibedes.png" alt="Ibedes Studio" class="user-icon">
+                    <span>Ibedes Studio</span>
                 </div>
-                <div class="user-account">
-                    <img src="img/windows98-icons/ico/user.ico" alt="Guest">
+                <div class="user-account" data-user="guest">
+                    <img src="https://cdn.pixabay.com/photo/2024/03/11/19/15/ai-generated-8627457_1280.png" alt="Guest" class="user-icon">
                     <span>Guest</span>
                 </div>
             </div>
